--- a/ZeyoMeasurement/Main.storyboard
+++ b/ZeyoMeasurement/Main.storyboard
@@ -276,7 +276,7 @@
                                     <outlet property="thumbImage" destination="ieo-sn-fGO" id="bwp-Fk-fzD"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentCell" textLabel="8w9-Ls-FiV" detailTextLabel="DLc-JQ-N2f" style="IBUITableViewCellStyleValue1" id="mUR-8C-Snt" customClass="ContentCell" customModule="ZeyoMeasurement" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentCell" textLabel="8w9-Ls-FiV" detailTextLabel="DLc-JQ-N2f" style="IBUITableViewCellStyleValue1" id="mUR-8C-Snt">
                                 <rect key="frame" x="0.0" y="198" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mUR-8C-Snt" id="Qgr-bW-Ktq">
