--- a/ZeyoMeasurement/Main.storyboard
+++ b/ZeyoMeasurement/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Q49-NB-5Kf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nNS-1K-wha">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -56,13 +56,14 @@
                             <constraint firstItem="DMY-oi-oeI" firstAttribute="centerX" secondItem="ocA-Uq-ZQ1" secondAttribute="centerX" id="aBy-qN-OV9"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="5Yz-Ga-L7n"/>
                     <connections>
-                        <segue destination="2rg-gO-45v" kind="presentation" identifier="modalARSegue" id="5Sk-PK-JmW"/>
+                        <segue destination="eIu-np-qLy" kind="show" identifier="modalARSegue" id="Njc-Sy-1lX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="deo-fY-Flb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="268" y="-223"/>
+            <point key="canvasLocation" x="2159.1999999999998" y="-222.63868065967017"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="gpu-NC-Kut">
@@ -79,9 +80,9 @@
                                 </connections>
                             </arscnView>
                             <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kHq-PF-rsd">
-                                <rect key="frame" x="61" y="36" width="259.5" height="38"/>
+                                <rect key="frame" x="61" y="80" width="259" height="38"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="qY8-rk-rbB">
-                                    <rect key="frame" x="0.0" y="0.0" width="259.5" height="38"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="259" height="38"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Measure the length of blahblah" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7B-vy-ezp">
@@ -191,7 +192,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BAv-df-Fao">
-                                <rect key="frame" x="8" y="36" width="22" height="22"/>
+                                <rect key="frame" x="8" y="80" width="22" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="22" id="Voc-oM-z7p"/>
                                     <constraint firstAttribute="height" constant="22" id="rSQ-0f-7Fl"/>
@@ -240,7 +241,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hL6-fh-IQn" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <customObject id="Xd1-Rd-srm" customClass="SCNScene"/>
             </objects>
-            <point key="canvasLocation" x="1968.8" y="-222.63868065967017"/>
+            <point key="canvasLocation" x="2908" y="-222.63868065967017"/>
         </scene>
         <!--ResultVC-->
         <scene sceneID="eRM-pW-Sf2">
@@ -355,24 +356,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V50-UV-xxz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2768.8000000000002" y="-224.4377811094453"/>
+            <point key="canvasLocation" x="3708" y="-224.4377811094453"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="U1M-gh-rOk">
+        <scene sceneID="a3V-gb-jvQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="2rg-gO-45v" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nNS-1K-wha" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PhL-MS-uFs">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DwT-BG-EJF">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="eIu-np-qLy" kind="relationship" relationship="rootViewController" id="Z1c-rN-b4f"/>
+                        <segue destination="Q49-NB-5Kf" kind="relationship" relationship="rootViewController" id="C25-Km-eMn"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yjT-MG-R6A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xBJ-MZ-hT7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1029.5999999999999" y="-222.63868065967017"/>
+            <point key="canvasLocation" x="1220" y="-223.53823088455775"/>
         </scene>
     </scenes>
     <resources>
